# json-result

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: enum.rs  lib.rs  main.rs  struct.rs  test.rs
